objects/WooCommerce_Serializer__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WooCommerce Serializers</relationshipLabel>
        <relationshipName>WooCommerce_Serializers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WooCommerce Serializers</relationshipLabel>
        <relationshipName>WooCommerce_Serializers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WooCommerce Serializers</relationshipLabel>
        <relationshipName>WooCommerce_Serializers</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Retry_Count__c</fullName>
        <label>Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>WooCommerce Serializer</label><nameField>
        <label>WooCommerce Serializer Name</label>
        <type>Text</type>
    </nameField><pluralLabel>WooCommerce Serializers</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Body__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>No_Opp</fullName>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error__c</columns>
        <columns>Body__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/16/2018 12:00 AM</value>
        </filters>
        <label>No Opp</label>
    </listViews><listViews>
        <fullName>failed</fullName>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Body__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>failed</label>
    </listViews></CustomObject>